--- a/.github/workflows/sync-notion-cycle.yml
+++ b/.github/workflows/sync-notion-cycle.yml
@@ -78,7 +78,12 @@ jobs:
           set -euo pipefail
           if git status --porcelain | grep -q .; then
             branch="bot/cycle-${{ steps.cycle.outputs.next_cycle }}"
-            git checkout -B "$branch"
+            git fetch origin "$branch" || true
+            if git show-ref --verify --quiet "refs/remotes/origin/$branch"; then
+              git checkout -B "$branch" "origin/$branch"
+            else
+              git checkout -B "$branch"
+            fi
             git add -A
             git commit -m "Add merkle files for cycle ${{ steps.cycle.outputs.next_cycle }}"
             git push -u origin "$branch" --force-with-lease
@@ -127,7 +132,12 @@ jobs:
           cd /tmp/kyber-applications
           if git status --porcelain | grep -q .; then
             branch="bot/new-cycle-${{ steps.cycle.outputs.next_cycle }}"
-            git checkout -B "$branch"
+            git fetch origin "$branch" || true
+            if git show-ref --verify --quiet "refs/remotes/origin/$branch"; then
+              git checkout -B "$branch" "origin/$branch"
+            else
+              git checkout -B "$branch"
+            fi
             git add -A
             git commit -m "Update KEM DistributorCampaigns for cycle ${{ steps.cycle.outputs.next_cycle }}"
             git push -u origin "$branch" --force-with-lease
