feat: make PR creation idempotent

--- a/.github/workflows/sync-notion-cycle.yml
+++ b/.github/workflows/sync-notion-cycle.yml
@@ -84,7 +84,7 @@ jobs:
             git commit -m "Add merkle files for cycle ${{ steps.cycle.outputs.next_cycle }}"
             git push -u origin "$branch" --force
 
-            if gh pr view --repo KyberNetwork/fairflow-reward --head "$branch" >/dev/null 2>&1; then
+            if gh pr view --repo KyberNetwork/fairflow-reward --head "KyberNetwork:$branch" >/dev/null 2>&1; then
               echo "PR already exists for $branch."
             else
               gh pr create \
@@ -134,7 +134,7 @@ jobs:
             git commit -m "Update KEM DistributorCampaigns for cycle ${{ steps.cycle.outputs.next_cycle }}"
             git push -u origin "$branch" --force
 
-            if gh pr view --repo KyberNetwork/kyber-applications --head "$branch" >/dev/null 2>&1; then
+            if gh pr view --repo KyberNetwork/kyber-applications --head "KyberNetwork:$branch" >/dev/null 2>&1; then
               echo "PR already exists for $branch."
             else
               gh pr create \
